# pulseaudio-modules-bt

./: .gitmodules  CMakeLists.txt  README.md  a2dp-codecs.h  backend-ofono.c  bluez5-util.c  bluez5-util.h  config.h  config.h.in  configure.ac  module-bluez5-device.c  module-bluez5-discover.c
.github/: stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md
build-scripts/: build.bash  ubuntu-eoan.Dockerfile
pa_symdef/: module-bluetooth-discover-symdef.h  module-bluetooth-policy-symdef.h
src/: Makefile.am
src/modules/bluetooth/: a2dp-api.h  a2dp-codecs.h  backend-native.c  backend-ofono.c  bluez5-util.c  bluez5-util.h  module-bluetooth-discover.c  module-bluetooth-policy.c  module-bluez5-device.c  module-bluez5-discover.c
src/modules/bluetooth/a2dp/: a2dp-api.h  a2dp-codecs.h  a2dp_aac.c  a2dp_aptx.c  a2dp_ldac.c  a2dp_sbc.c  a2dp_util.c  aptx_libs.c  ffmpeg_libs.c  ffmpeg_libs.h  ldacBT.h  ldacBT_abr.h  ldac_libs.c  ldac_libs.h
